Fix lists line-height is too hight

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -107,3 +107,7 @@ hr {
 .title-ads{
   text-align: center;
 }
+
+ol li{
+  line-height: 1px;
+}
